@@ -128,6 +128,15 @@ $this->widget('zii.widgets.grid.CGridView', array(
             'name'=>'date_of_creation',
             'filter'=>'',
         ),
+        array(
+            'name'=>'social_login',
+            'type'=>'html',
+            'filter'=>'',
+            'value'=>'
+                (is_array($data->social_login) && array_intersect($data->social_login, Users::getSocialLogIn()))?CHtml::image(Yii::app()->getModule("bum")->assetsUrl . "/images/facebook_small.gif","f",array("title"=>"facebook logIn is enabled", "style"=>"width:11px;height:11px;")):""
+            ',
+ 
+        ),//*/
 		array(
 			'class'=>'CButtonColumn',
             'viewButtonUrl'=>'$this->grid->controller->createUrl("users/viewProfile", array("id" => $data["id"]))',
